unpackaged/main/default/objects/SBQQ__BlockPrice__c/fields/SBQQ__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__EffectiveDate__c</fullName>
    <description>The date when this block price is effective.  The value is taken when a block price snapshot is taken at order creation time.</description>
    <inlineHelpText>Date à laquelle ce prix par bloc entre en vigueur. Cette valeur est appliquée lorsqu&#39;un instantané de prix par bloc est pris au moment de la création de la commande.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>