unpackaged/main/default/objects/SBQQ__BlockPrice__c/fields/SBQQ__OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order product this Block Price applies to when the order product is created.</description>
    <inlineHelpText>Produit commandé auquel le prix par bloc s&#39;applique lorsque ce produit commandé est créé.</inlineHelpText>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Block Price Snapshots</relationshipLabel>
    <relationshipName>BlockPrice</relationshipName>
    <type>Lookup</type>
</CustomField>