unpackaged/main/default/objects/SBQQ__BlockPrice__c/fields/SBQQ__UpperBound__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__UpperBound__c</fullName>
    <description>Upper bound of the quantity range for this block price.</description>
    <inlineHelpText>Limite supérieure de la plage de quantités de ce prix par bloc.</inlineHelpText>
    <label>Upper Bound</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>